--- a/programs.html
+++ b/programs.html
@@ -6,5 +6,15 @@
 </head>
 <body>
 
+
+<div id="container">
+    <div id="sidebar"></div>
+    <div id="content">
+        <div id="diamond"></div>
+        <div id="spade"></div>
+        <div id="club"></div>
+    </div>
+</div>
+
 </body>
 </html>
