added media queries

--- a/programs.html
+++ b/programs.html
@@ -5,22 +5,19 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Winorama | About</title>
-    <link rel="shortcut icon" href="img/logo.png" type="image/png">
+    <!--<link rel="shortcut icon" href="img/logo.png" type="image/png">-->
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/ionicons.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="/programs..css" />
+    <link rel="stylesheet" href="/programs.css" />
 
 </head>
 <body>
 
 
-<div id="container">
-    <div id="sidebar"></div>
-    <div id="content">
-        <div id="diamond"></div>
-        <div id="spade"></div>
-        <div id="club"></div>
+<div class="column row">
+    <div class="column">
+        <img src="//placehold.it/300x300" class="thumbnail" alt="">
     </div>
 </div>
 
