separate divs for images and text

--- a/programs.html
+++ b/programs.html
@@ -19,6 +19,12 @@
     <div class="column">
         <img src="//placehold.it/300x300" class="thumbnail" alt="">
     </div>
+
+    <div class="column row">
+       <p>
+           The pin rises malaria like a wet cockroach.
+       </p>
+    </div>
 </div>
 
 </body>
