--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Foundation for Sites</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="/./js/parallax.min.js"></script>
 </head>
 
 <body>
@@ -44,6 +46,23 @@
             </ul>
         </div>
     </div>
+
+
+    <section class="hero">
+        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/hero3.jpg"></div>
+    </section>
+    <section class="about">
+        <p>WE ARE AN ORGANIZATION ADDRESSING POVERTY-RELATED ISSUES SURROUNDING WOMEN AND CHILDREN.</p>
+    </section>
+
+
+    <section class="quote">
+        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/hero3.jpg"></div>
+    </section>
+
+    <section class="impact">
+
+    </section>
 
 
     <script src="js/vendor/jquery.js"></script>
