--- a/programs.html
+++ b/programs.html
@@ -15,12 +15,12 @@
 <body>
 
 
-<div class="column row">
+<div class="column row wrapper">
     <div class="column">
         <img src="//placehold.it/300x300" class="thumbnail" alt="">
     </div>
 
-    <div class="column row">
+    <div class="first">
        <p>
            The pin rises malaria like a wet cockroach.
        </p>
