--- a/index.html
+++ b/index.html
@@ -61,8 +61,37 @@
     </section>
 
     <section class="impact">
+        <div class="row">
+            <div class="small-12 large-4 columns">
+                <p>DEMO</p>
+            </div>
+            <div class="small-12 large-4 columns">
+                <p>DEMO</p>
+            </div>
+            <div class="small-12 large-4 columns">
+                <p>DEMO</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="events-prog">
 
     </section>
+
+    <footer>
+        <div class="row contact">
+            <div class="light-pink small-12 large-3 columns">
+                <!-- ... -->
+            </div>
+            <div class="dark-pink small-12 large-5 columns">
+                <!-- ... -->
+            </div>
+            <div class="dark-pink small-12 large-4 columns">
+                <!-- ... -->
+            </div>
+        </div>
+        <p>Copyright © 2016 </p>
+    </footer>
 
 
     <script src="js/vendor/jquery.js"></script>
