reaponsive smart phone

--- a/programs.html
+++ b/programs.html
@@ -9,22 +9,36 @@
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/ionicons.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="/programs.css" />
+    <link rel="stylesheet" href="programs.css" />
 
 </head>
 <body>
 
 
 <div class="column row wrapper">
-    <div class="column">
-        <img src="//placehold.it/300x300" class="thumbnail" alt="">
+
+
+
+
+    <div class="row medium-uncollapse large-collapse">
+        <div class="small-6 columns right">
+            <div class="column">
+                <img src="//placehold.it/300x300" class="thumbnail" alt="">
+            </div>
+        </div>
+        <div class="small-6 columns left">
+            <div class="first">
+                <p>
+                    The pin rises malaria like a wet cockroach.
+                </p>
+            </div>
+        </div>
     </div>
 
-    <div class="first">
-       <p>
-           The pin rises malaria like a wet cockroach.
-       </p>
-    </div>
+
+
+
+
 </div>
 
 </body>
