web-page colors changed

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
     <section class="hero">
-        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/hero3.jpg"></div>
+        <div class="parallax-window" data-parallax="scroll" data-image-src="/img/qoute-pic.JPG"></div>
     </section>
     <section class="about">
         <p>WE ARE AN ORGANIZATION ADDRESSING POVERTY-RELATED ISSUES SURROUNDING WOMEN AND CHILDREN.</p>
@@ -57,19 +57,19 @@
 
 
     <section class="quote">
-        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/hero3.jpg"></div>
+        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/qoute-pic2.JPG"></div>
     </section>
 
     <section class="impact">
         <div class="row">
             <div class="small-12 large-4 columns">
-                <p>DEMO</p>
+                <p>3000</p>
             </div>
             <div class="small-12 large-4 columns">
-                <p>DEMO</p>
+                <p>3000</p>
             </div>
             <div class="small-12 large-4 columns">
-                <p>DEMO</p>
+                <p>3000</p>
             </div>
         </div>
     </section>
@@ -81,13 +81,18 @@
     <footer>
         <div class="row contact">
             <div class="light-pink small-12 large-3 columns">
-                <!-- ... -->
+                <h5>WHERE ARE WE?</h5>
+                <p>We live in Melbourne,Australia.
+                    <br> Need to get in touch? Head over to the CONTACT page and send us a message.</p>
             </div>
             <div class="dark-pink small-12 large-5 columns">
-                <!-- ... -->
+                <h5>ABOUT US</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
             </div>
             <div class="dark-pink small-12 large-4 columns">
-                <!-- ... -->
+                <h5>LET'S BE SOCIAL</h5>
+
             </div>
         </div>
         <p>Copyright © 2016 </p>
