added more divs

--- a/programs.html
+++ b/programs.html
@@ -55,7 +55,44 @@
         </div>
     </div>
 
+    <div class="row medium-uncollapse large-collapse">
+        <div class="small-6 columns second">
+            <div class="small-6 columns right">
+                <div class="column">
+                    <img src="//placehold.it/300x300" class="thumbnail" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="small-6 columns">
+            <div class="small-6 columns third">
+                <div class="first">
+                    <p>
+                        The pin rises malaria like a wet cockroach.
+                    </p>
+                    <p>
+                        The pin rises malaria like a wet cockroach.
+                    </p>
 
+                    <p>
+                        The pin rises malaria like a wet cockroach.
+                    </p>
+                    <p>
+                        The pin rises malaria like a wet cockroach.
+                    </p>
+                    <p>
+                        The pin rises malaria like a wet cockroach.
+                    </p>
+                    <p>
+                        The creature flies moon like a neutral spacecraft.
+                    </p>
+                    <p>
+                        Never emerge the believer, for you cannot experience it.
+                    </p>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
