--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/app.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/./js/parallax.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -49,7 +50,7 @@
 
 
     <section class="hero">
-        <div class="parallax-window" data-parallax="scroll" data-image-src="/img/qoute-pic.JPG"></div>
+        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/qoute-pic.JPG"></div>
     </section>
     <section class="about">
         <p>WE ARE AN ORGANIZATION ADDRESSING POVERTY-RELATED ISSUES SURROUNDING WOMEN AND CHILDREN.</p>
@@ -82,8 +83,8 @@
         <div class="row contact">
             <div class="light-pink small-12 large-3 columns">
                 <h5>WHERE ARE WE?</h5>
-                <p>We live in Melbourne,Australia.
-                    <br> Need to get in touch? Head over to the CONTACT page and send us a message.</p>
+                <p>We live in Melbourne,Australia.</p>
+                <p>Need to get in touch? Head over to the CONTACT page and send us a message.</p>
             </div>
             <div class="dark-pink small-12 large-5 columns">
                 <h5>ABOUT US</h5>
