--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 
 
     <section class="hero">
-        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/qoute-pic.JPG"></div>
+        <div class="parallax-window" data-parallax="scroll" data-image-src="./img/hero4.jpg">
+            <p>WE ARE AN ORGANIZATION ADDRESSING</p>
+        </div>
     </section>
     <section class="about">
         <p>WE ARE AN ORGANIZATION ADDRESSING POVERTY-RELATED ISSUES SURROUNDING WOMEN AND CHILDREN.</p>
@@ -93,7 +95,7 @@
             </div>
             <div class="dark-pink small-12 large-4 columns">
                 <h5>LET'S BE SOCIAL</h5>
-
+                <h5>LOOKING FOR SOMETHING</h5>
             </div>
         </div>
         <p>Copyright © 2016 </p>
