--- a/index.html
+++ b/index.html
@@ -14,40 +14,17 @@
 </head>
 
 <body>
-    <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-        <div class="title-bar-title">Menu</div>
-        <button class="menu-icon top-bar-right" type="button" data-toggle></button>
-
-    </div>
-
-    <div class="top-bar" id="example-menu">
-        <div class="top-bar-left">
-            <ul class="dropdown menu" data-dropdown-menu>
-                <li class="menu-text">Site Title</li>
-                <li>
-                    <a href="#">One</a>
-                    <ul class="menu vertical">
-                        <li><a href="#">One</a></li>
-                        <li><a href="#">Two</a></li>
-                        <li><a href="#">Three</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Two</a></li>
-                <li><a href="#">Three</a></li>
+    <section>
+        <nav class="top-navigation">
+            <ul>
+                <li><a href="#home">LOGO</a></li>
+                <li style="float:right"><a class="active" href="#about">About</a></li>
+                <li style="float:right"><a href="#about">About</a></li>
+                <li style="float:right"><a href="#about">About</a></li>
+                <li style="float:right"><a href="#about">About</a></li>
             </ul>
-        </div>
-        <div class="top-bar-right">
-            <ul class="menu">
-                <li>
-                    <input type="search" placeholder="Search">
-                </li>
-                <li>
-                    <button type="button" class="button">Search</button>
-                </li>
-            </ul>
-        </div>
-    </div>
-
+        </nav>
+    </section>
 
     <section class="hero">
         <div class="parallax-window" data-parallax="scroll" data-image-src="./img/hero4.jpg">
