styled top nav-bar

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     <section>
         <nav class="top-navigation">
             <ul>
-                <li><a href="#home">LOGO</a></li>
-                <li style="float:right"><a class="active" href="#about">About</a></li>
-                <li style="float:right"><a href="#about">About</a></li>
-                <li style="float:right"><a href="#about">About</a></li>
-                <li style="float:right"><a href="#about">About</a></li>
+                <li>
+                    <a href="#home"><img src="./img/pngone.png"></a>
+                </li>
+                <li style="float:right; padding-top:20px;"><a class="active" href="#about">DONATE</a></li>
+                <li style="float:right; margin-right:100px; padding-top:20px;"><a href="#about">SUPPORT</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#about">EVENTS</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#about">ABOUT</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#about">HOME</a></li>
             </ul>
         </nav>
     </section>
