fixing merge conflicts

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
     <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what======= >>>>>>> 216659b0ea0e43c84ea36d78cb0038f6f2750470-input.js"></script>
+    <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
 </body>
