added thhe texts

--- a/programs.html
+++ b/programs.html
@@ -17,7 +17,17 @@
 
 <div class="column row wrapper">
 
-
+<h1>
+    Stardom-Foundation | Programs
+</h1>
+    <p>
+        Stardom-Foundation has three core programs:
+    <ul>
+    <li>Ferox deuss ducunt ad contencio.</li>
+    <li>Cauliflower combines greatly with old tuna.</li>
+    <li>Why does the starship warp.</li>
+    </ul>
+    </p>
 
 
     <div class="row medium-uncollapse large-collapse">
