--- a/programs.html
+++ b/programs.html
@@ -33,7 +33,7 @@
     <div class="row medium-uncollapse large-collapse">
         <div class="small-6 columns right">
             <div class="column">
-                <img src="//placehold.it/300x300" class="thumbnail" alt="">
+                <img src="img/smile.png" class="thumbnail" alt="">
             </div>
         </div>
         <div class="small-6 columns left">
@@ -95,7 +95,7 @@
             </div>
             <div class="small-6 columns third">
                 <div class="column">
-                    <img src="//placehold.it/300x300" class="thumbnail" alt="">
+                    <img src="img/bath.jpg" class="thumbnail" alt="">
                 </div>
             </div>
     </div>
@@ -104,7 +104,7 @@
     <div class="row medium-uncollapse large-collapse">
         <div class="small-6 columns fourth">
             <div class="column">
-                <img src="//placehold.it/300x300" class="thumbnail" alt="">
+                <img src="img/kibera.jpeg" class="thumbnail" alt="">
             </div>
         </div>
         <div class="small-6 columns fifth">
