added nav bar for responsive menu

--- a/index copy.html
+++ b/index copy.html
@@ -36,7 +36,7 @@
             <a href="#">DONATE</a>
         </div>
     </div>
-    <span class="mobile_nav" style="font-size:30px;cursor:pointer" onclick="openNav()">☰ open</span>
+    <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
 
     <section class="hero">
         <div class="parallax-window" data-parallax="scroll" data-image-src="./img/hero4.jpg">
