--- a/nav_mobile.html
+++ b/nav_mobile.html
@@ -8,7 +8,7 @@
     <title>Foundation for Sites</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-   <link rel="stylesheet" href="css/nav_mobile.css">
+    <link rel="stylesheet" href="css/nav_mobile.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
             <a href="#">DONATE</a>
         </div>
     </div>
-    <span class="mobile_nav" style="font-size:30px;cursor:pointer" onclick="openNav()">☰ open</span>
+    <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
 
 
 
