--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <a href="#home"><img src="./img/pngone.png"></a>
                 </li>
                 <li style="float:right; padding-top:20px;"><a class="active" href="#about">DONATE</a></li>
-                <li style="float:right; margin-right:100px; padding-top:20px;"><a href="#about">SUPPORT</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#about">EVENTS</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#about">ABOUT</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#about">HOME</a></li>
+                <li style="float:right; margin-right:100px; padding-top:20px;"><a href="./programs.html">SUPPORT</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./events.html">EVENTS</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./about.html">ABOUT</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#hero">HOME</a></li>
             </ul>
         </nav>
     </section>
