deleted unused files

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+
+
+    <!--    *******************************  -->
+    <!--    Beginning Of Nav Bar-->
     <section>
         <nav class="desk_nav top-navigation">
             <ul>
@@ -27,18 +31,22 @@
                 <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#hero">HOME</a></li>
             </ul>
         </nav>
-    </section>
-    <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <div class="overlay-content">
-            <a href="#">HOME</a>
-            <a href="#">ABOUT</a>
-            <a href="#">EVENTS</a>
-            <a href="#">SUPPORT</a>
-            <a href="#">DONATE</a>
+
+        <div id="myNav" class="overlay">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+            <div class="overlay-content">
+                <a href="#hero">HOME</a>
+                <a href="./about.html">ABOUT</a>
+                <a href="./events.html">EVENTS</a>
+                <a href="./programs.html">SUPPORT</a>
+                <a href="#abot">DONATE</a>
+            </div>
         </div>
-    </div>
-    <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
+        <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
+    </section>
+    <!--    End of Nav Bar-->
+
+
     <section class="hero">
         <div class="parallax-window" data-parallax="scroll" data-image-src="./img/overlay-pic.png">
             <p>WE ARE AN ORGANIZATION ADDRESSING</p>
@@ -82,7 +90,7 @@
                 <p>Need to get in touch? Head over to the CONTACT page and send us a message.</p>
             </div>
             <div class="dark-pink small-12 large-5 columns">
-                <h5>ABOUT US</h5> 
+                <h5>ABOUT US</h5>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             </div>
