--- a/about.html
+++ b/about.html
@@ -2,14 +2,49 @@
 <html>
 
 <head>
-    <title>About | Stardom Foundation</title>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
+
+    <title>About &#124; Stardom Foundation</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" type="text/css" href="css/about.css">
 
+    <link rel="stylesheet" type="text/css" href="css/about.css">
+    <link rel="stylesheet" href="css/nav_mobile.css">
 </head>
 
 <body>
+
+    <!--    *******************************  -->
+    <!--    Beginning Of Nav Bar-->
+    <section>
+        <nav class="desk_nav top-navigation">
+            <ul>
+                <li>
+                    <a href="#home"><img src="./img/pngone.png"></a>
+                </li>
+                <li style="float:right; padding-top:20px;"><a class="active" href="#about">DONATE</a></li>
+                <li style="float:right; margin-right:100px; padding-top:20px;"><a href="./programs.html">SUPPORT</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./events.html">EVENTS</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./about.html">ABOUT</a></li>
+                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="index.html">HOME</a></li>
+            </ul>
+        </nav>
+
+        <div id="myNav" class="overlay">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+            <div class="overlay-content">
+                <a href="index.html">HOME</a>
+                <a href="./about.html">ABOUT</a>
+                <a href="./events.html">EVENTS</a>
+                <a href="./programs.html">SUPPORT</a>
+                <a href="#abot">DONATE</a>
+            </div>
+        </div>
+        <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
+    </section>
+    <!--    End of Nav Bar-->
+
+
     <div class="trial">
         <div class="woa">
             <h1>STARDOM FOUNDATION</h1>
@@ -38,6 +73,10 @@
         </div>
     </div>
 
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
