--- a/about.html
+++ b/about.html
@@ -2,12 +2,26 @@
 <html>
 
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
+    <!--
 
+    <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About &#124; Stardom Foundation</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
 
+    <link rel="stylesheet" type="text/css" href="css/about.css">
+    <link rel="stylesheet" href="css/nav_mobile.css">
+-->
+
+
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
+    <title>About &#124; Stardom Foundation</title>
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
     <link rel="stylesheet" href="css/nav_mobile.css">
 </head>
