fixed overlay issue

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <section class="impact">
         <div class="row">
             <div class="small-12 medium-4 large-4 columns">
-                <p>3000</p>
+                <p>3000 <br> <span class="impact-small">VOLUNTEERS</span> </p>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-                <p>3000</p>
+                <p>3000 <br> <span class="impact-small">VOLUNTEERS</span> </p>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-                <p>3000</p>
+                <p>3000 <br> <span class="impact-small">VOLUNTEERS</span> </p>
             </div>
         </div>
     </section>
@@ -95,7 +95,7 @@
     <div class="contact">
         <form>
             <div class="input-group message">
-                <textarea name="" id="" cols="47" rows="5" placeholder="Search in this website"></textarea>
+                <textarea name="" id="" cols="47" rows="5" placeholder="Email Us"></textarea>
             </div>
         </form>
     </div>
